17_Autoscaling_Karpenter/17_01_Karpenter_Install/deploy/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:837318114635:certificate/aae91c28-7034-48da-9966-bcaf57e20bad
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: app.mahesh1249.store
spec:
  ingressClassName: alb
  rules:
    - host: app.mahesh1249.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-proxy-service
                port:
                  number: 80
